--- a/main.html
+++ b/main.html
@@ -11,6 +11,13 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div data-ns-test="block-inline-button">
+		<button>Test1</button>     
+		<button>Test2</button>
+
+		Answer: Inline	
+	</div>
+
 </body>
 
 </html>
