--- a/main.html
+++ b/main.html
@@ -18,6 +18,14 @@
 		Answer: Inline	
 	</div>
 
+	
+	<div data-ns-test="block-inline-div">
+		<div>Test1</div>
+		<div>Test2</div>
+
+		Answer: Block	
+	</div>
+
 </body>
 
 </html>
