--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 		<button>Test1</button>     
 		<button>Test2</button>
 
-		Answer: Inline	
+		Answer:Inline	
 	</div>
 
 	
@@ -23,7 +23,13 @@
 		<div>Test1</div>
 		<div>Test2</div>
 
-		Answer: Block	
+		Answer:Block	
+	</div>
+	<div data-ns-test="block-inline-span">
+		<span>Test1</span>
+		<span>Test2</span>
+		Answer:Inline
+		
 	</div>
 
 </body>
