--- a/main.html
+++ b/main.html
@@ -32,6 +32,19 @@
 		
 	</div>
 
+	<div data-ns-test="block-inline-p">
+		<p>Test1</p>
+		<p>Test2</p>
+		Answer:Block	
+		
+	</div>
+
+	<div data-ns-test="block-inline-input">
+		<input type="text">Test1
+		<input type="text">Test2
+		Answer:Inline
+	</div>
+
 </body>
 
 </html>
