--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<div data-ns-test="block-inline-button">
-		<button>Test1</button>     
-		<button>Test2</button>
+	<div >
+		<button data-ns-test="block-inline-button">Test1</button>     
+		<button data-ns-test="block-inline-button">Test2</button>
 
 		Answer:Inline	
 	</div>
