--- a/main.html
+++ b/main.html
@@ -12,6 +12,13 @@
 </script>
 
 	<div >
+		<h1 data-ns-test="block-inline-h1">Test1</h1>
+		<h1 data-ns-test="block-inline-h1">Test2</h1>
+
+		Answer: Block
+	</div>
+
+	<div >
 		<button data-ns-test="block-inline-button">Test1</button>     
 		<button data-ns-test="block-inline-button">Test2</button>
 
@@ -24,7 +31,18 @@
 		<div>Test2</div>
 
 		Answer: Block	
+	</div><br><br><br>
+
+	<div data-ns-test="block-inline-input">
+		
+
+	<input>Test1
+	<input>Test2
+
+		Answer: Inline		
 	</div>
+	
+	
 	<div data-ns-test="block-inline-span">
 		<span>Test1</span>
 		<span>Test2</span>
