--- a/main.html
+++ b/main.html
@@ -25,41 +25,44 @@
 		Answer: Inline	
 	</div>
 
+
+	<div >
+		
+
+	<input data-ns-test="block-inline-input">Test1
+	<input data-ns-test="block-inline-input">Test2
+
+	Answer: Inline		
+	</div><br><br><br><br>
 	
-	<div data-ns-test="block-inline-div">
-		<div>Test1</div>
-		<div>Test2</div>
+
+	
+	<div>
+		<div  data-ns-test="block-inline-div">Test1</div>
+		<div  data-ns-test="block-inline-div">Test2</div>
 
 		Answer: Block	
 	</div><br><br><br>
 
-	<div data-ns-test="block-inline-input">
-		
-
-	<input>Test1
-	<input>Test2
-
-		Answer: Inline		
-	</div><br><br><br><br>
 	
 	
-	<div data-ns-test="block-inline-span">
-		<span>Test1</span>
-		<span>Test2</span>
+	<div >
+		<span data-ns-test="block-inline-span">Test1</span>
+		<span data-ns-test="block-inline-span">Test2</span>
 		Answer: Inline
 		
 	</div>
 
-	<div data-ns-test="block-inline-p">
-		<p>Test1</p>
-		<p>Test2</p>
+	<div >
+		<p data-ns-test="block-inline-p">Test1</p>
+		<p data-ns-test="block-inline-p">Test2</p>
 		Answer: Block	
 		
 	</div>
 
-	<div data-ns-test="block-inline-input">
-		<input type="text">Test1
-		<input type="text">Test2
+	<div >
+		<input  data-ns-test="block-inline-input" type="text">Test1
+		<input data-ns-test="block-inline-input"  type="text">Test2
 		Answer: Inline
 	</div>
 
