--- a/main.html
+++ b/main.html
@@ -66,6 +66,31 @@
 		Answer: Inline
 	</div>
 
+	<div>
+		<cite  data-ns-test="block-inline-cite">Test1</cite>
+		<cite  data-ns-test="block-inline-cite">Test2</cite>
+		Answer: Inline
+	</div>
+
+	<div>
+		<code data-ns-test="block-inline-code" >Test1</code>
+		<code  data-ns-test="block-inline-code" >Test2</code>
+		Answer: Inline
+		
+	</div>
+
+	<div>
+		<sub data-ns-test=" block-inline-sub">Test1</sub>
+		<sub data-ns-test=" block-inline-sub">Test2</sub>
+		Answer: Inline
+	</div>
+
+	<div>
+		<sup data-ns-test="block-inline-sup" >Test1</sup>
+		<sup data-ns-test="block-inline-sup" >Test2</sup>
+	</div>
+	</div>
+
 </body>
 
 </html>
