--- a/main.html
+++ b/main.html
@@ -88,6 +88,7 @@
 	<div>
 		<sup data-ns-test="block-inline-sup" >Test1</sup>
 		<sup data-ns-test="block-inline-sup" >Test2</sup>
+		Answer: Inline
 	</div>
 	</div>
 
